# pytest-vscode

./: .gitignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
code/src/: extension.ts
pytest_ls/: README.md  pyproject.toml  setup.cfg
pytest_ls/pytest_ls/: __main__.py  brain.py  config.py  parser.py  server.py  utils.py
pytest_ls/tests/: conftest.py  test_fixtures.py  test_main.py  test_parser.py  test_utils.py
pytest_ls/workspace/: conftest.py  test_classes.py  test_simple.py
pytest_ls/workspace/nested/: test_nested.py
server/: __main__.py
src/: extension.ts  parse.ts
src/test/: index.ts  parse.test.ts
src/test/suite/: index.ts  parse.test.ts
src/unit_tests/: parse.test.ts
