[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore tests/workspace"
filterwarnings = [
    "ignore:'contextfunction' is renamed to 'pass_context',*:DeprecationWarning",
    "ignore:'environmentfilter' is renamed to 'pass_environment',*:DeprecationWarning",
]